@@ -6,8 +6,7 @@
 set -e
 JAVA_OPTS="${JAVA_OPTS} \
 -javaagent:${APP_HOME}/${JMXTRANS_AGENT}.jar=${APP_HOME}/jmxtrans-agent.xml \
--XX:+UseConcMarkSweepGC \
--XX:+UseParNewGC \
+-XX:+UseG1GC \
 -Xmx${JAVA_XMX} \
 -Xms${JAVA_XMS} \
 -Dapplication.name=${APP_NAME} \
